username token logintypetoken으로 변경